# DnDBot

./: .gitignore  ApiClient.cpp  CMakeLists.txt  DiscordManager.cpp
include/: ApiClient.h
